--- a/src/APKBUILD
+++ b/src/APKBUILD
@@ -6,6 +6,7 @@ pkgdesc="An answerfile and automated post-install script for Alpine Linux"
 url="https://git.sr.ht/~henriquehbr/alpine.sh"
 arch="all"
 license="GPL-3.0-or-later"
+install="$pkgname.post-install"
 source="answerfile.sh post-install"
 options="!check"
 
@@ -17,5 +18,5 @@ package() {
 }
 sha512sums="
 03f09f4692fad399232dc8d223498dabde8bbcd858e80c65b4ebaf321f8474a2798995d2d9610a2b70cf3331a54c5f93a4c8fbe3ff10cc48fcb4c6e063737d5b  answerfile.sh
-6872b263e82b3c619711fbd8fda873cbc169e90699ec0089c3521fb6955e4143897f2be0dfef9cb1d6861a204ebf30d4a65ffeedc33668f980e08f203924b3f0  post-install
+c09c13847b537d2a774283c3c96b3630a03e9fcabe9cbbadeb61cf96220f2709942bb8279f8998e1799a17efc350db37eafc825d2c676e8c4be081888cdb09ce  post-install
 "
